# Modular-Mjolnir-Maker

./: BUILD_THE_EXE.md  CHANGELOG_v1.1.md  README.md  SOURCE_VALIDATION.txt  index.html  lib.rs  package-lock.json  package.json
.github/workflows/: build-windows-exe.yml
Mjolnir_Builder_v1.1_Update_Files/: UPLOAD_THESE_FILES.txt
Mjolnir_Builder_v1.1_Update_Files/src/: main.js
Mjolnir_Builder_v1.1_Update_Files/src-tauri/: Cargo.toml  tauri.conf.json
assets/: 01_Mjolnir_Hammer_Head_System_Clean_Circles.3mf  02_Mjolnir_Classic_Comic_Pommel_Side_Slots.3mf  03_Mjolnir_Real_Leather_Handle_Core_Library.3mf  04_Mjolnir_Detailed_Printed_Leather_Handle_Library.3mf  05_Mjolnir_Wrist_Strap_Options.3mf
src/: main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
