[package]
name = "mjolnir-builder"
version = "1.1.0"
description = "Modular classic comics Mjolnir configurator and 3MF exporter"
authors = ["Robin Chippendale"]
edition = "2021"

[lib]
name = "mjolnir_builder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }
quick-xml = { version = "0.37", features = ["serialize"] }
regex = "1"
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
base64 = "0.22"
